# styli.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
LICENSES/kmeans_colors/: LICENSE
LICENSES/wallust/: LICENSE
src/: colors.rs  config.rs  download.rs  lib.rs  main.rs  resolution.rs  wal.rs
src/sources/: mod.rs  nasa.rs  picsum.rs  reddit.rs
src/wallpaper/: auto.rs  aww.rs  awww.rs  custom.rs  feh.rs  gnome.rs  hyprland.rs  kde.rs  mod.rs  nitrogen.rs  sway.rs  swww.rs  xfce.rs
